--- a/2.DynamoCraft.UI/src/app/components/nouveautes/nouveautes.component.html
+++ b/2.DynamoCraft.UI/src/app/components/nouveautes/nouveautes.component.html
@@ -4,14 +4,17 @@
         @for (nouveaute of nouveautes; track nouveaute.id) {
         <div class="col d-flex align-items-stretch">
             <a routerLink="/home" class="text-decoration-none w-100">
-                <div class="card h-100 text-center shadow-sm border-0 card-hover rounded m-3">
+                <div class="card-hover image-container rounded h-100 text-center shadow-sm border-0">
                     @if (nouveaute.imageProjet && nouveaute.imageProjet.length > 0) {
-                    <img [src]="url + nouveaute.imageProjet[0].nom" class="rounded" alt="Image du projet"
-                        style="width: 100%; height: 200px; object-fit: cover;">
+                    <img [src]="url + nouveaute.imageProjet[0].nom" class="card-img-top rounded" alt="Image du projet">
                     } @else {
                     <p class="text-muted">Pas d'image disponible</p>
                     }
-                    <h5 class="card-title text-white text-center font-dc mt-3">{{nouveaute.nom | slice: 0: 20}}...</h5>
+                    <div
+                        class="hover-content d-flex justify-content-center align-items-center position-absolute top-0 start-0 w-100 h-100">
+                        <i class="bi bi-eye text-white" style="font-size: 2rem;"></i>
+                        <p class="file-name text-white text-center mt-2">{{ nouveaute.nom | slice: 0: 20 }}...</p>
+                    </div>
                 </div>
             </a>
         </div>
